--- a/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
+++ b/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
@@ -269,6 +269,39 @@
         BlockStorageCount: {{ overcloud_block_storage_scale }}
         ObjectStorageCount: {{ overcloud_swift_storage_scale }}
 
+# 5.11. CONFIGURING REGISTRATION FOR FAST FORWARD
+# UPGRADES
+
+- name: Write out custom ffu repo script based on guide
+  copy:
+    dest: /home/stack/environments/custom_repositories_script.yaml
+    content: |
+      parameter_defaults:
+        FastForwardCustomRepoScriptContent: |
+          #!/bin/bash
+          set -e
+          case $1 in
+            ocata)
+              subscription-manager repos --disable=rhel-7-server-openstack-10-rpms
+              subscription-manager repos --enable=rhel-7-server-openstack-11-rpms
+              ;;
+            pike)
+              subscription-manager repos --disable=rhel-7-server-openstack-11-rpms
+              subscription-manager repos --enable=rhel-7-server-openstack-12-rpms
+              ;;
+            queens)
+              subscription-manager repos --disable=rhel-7-server-openstack-12-rpms
+              subscription-manager repos --enable=rhel-7-server-openstack-13-rpms
+              subscription-manager repos --disable=rhel-7-server-rhceph-2-mon-rpms
+              subscription-manager repos --enable=rhel-7-server-rhceph-3-mon-rpms
+              subscription-manager repos --disable=rhel-7-server-rhceph-2-tools-rpms
+              subscription-manager repos --enable=rhel-7-server-rhceph-3-tools-rpms
+              ;;
+            *)
+              echo "unknown release $1" >&2
+              exit 1
+          esac
+
 # CHAPTER 6. UPGRADING THE OVERCLOUD
 
 # 6.1. PERFORMING THE FAST FORWARD UPGRADE OF THE
@@ -284,6 +317,7 @@
         -e /usr/share/openstack-tripleo-heat-templates/environments/network-isolation.yaml \
         -e /usr/share/openstack-tripleo-heat-templates/environments/net-bond-with-vlans.yaml \
         -e /home/stack/environments/networking-cisco-config.yaml \
+        -e /home/stack/environments/custom_repositories_script.yaml \
         --ntp-server 1.ntp.esl.cisco.com
 
 - name: Run the fast forward upgrade command
@@ -317,6 +351,7 @@
         -e /usr/share/openstack-tripleo-heat-templates/environments/network-isolation.yaml \
         -e /usr/share/openstack-tripleo-heat-templates/environments/net-bond-with-vlans.yaml \
         -e /home/stack/environments/networking-cisco-config.yaml \
+        -e /home/stack/environments/custom_repositories_script.yaml \
         --ntp-server 1.ntp.esl.cisco.com
 
 # CHAPTER 7. EXECUTING POST UPGRADE STEPS
