--- a/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
+++ b/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
@@ -9,224 +9,6 @@
       parameter_defaults:
         DeleteOnRHELUnregistration: false
 
-- name: Write out json converter template
-  copy:
-    dest: /home/stack/templates/json_converter.yaml
-    content: |
-      heat_template_version: 2015-04-30
-
-      parameters:
-        data:
-          type: json
-
-      resources: {}
-
-      outputs:
-        converted:
-          description: Json data
-          value: { get_param: data }
-
-- name: Write out replacement node extra config template for nexus/ucsm ml2
-  copy:
-    dest: /home/stack/templates/new_nexus_ucsm_extra_config.yaml
-    content: |
-      heat_template_version: 2015-04-30
-
-      description: Configure hieradata for Network Cisco configuration
-
-      parameters:
-        # Parameters passed from the parent template
-        servers:
-          type: json
-
-        # extra parameters passed via parameter_defaults
-        NetworkUCSMIp:
-          type: string
-          description: Cisco UCSM IP
-          default: 127.0.0.1
-        NetworkUCSMUsername:
-          type: string
-          description: Cisco UCSM username
-          default: admin
-        NetworkUCSMPassword:
-          type: string
-          description: Cisco UCSM password
-          default: ''
-          hidden: true
-        NetworkUCSMHostList:
-          type: string
-          description: >
-            Mac address to service profile mapping for UCSM-controlled hosts
-            The format is
-            '<host1-mac>:<profile>, <host2-mac>:<profile>, ...'
-          default: ''
-        NetworkUCSMSupportedPciDevs:
-          type: string
-          description: Cisco UCSM SR-IOV and VM-FEX vendors supported
-          default: ''
-        NetworkUCSMHttpsVerify:
-          type: boolean
-          description: >
-            Enabling/disabling UCS Manager SSL certificate verification
-          default: true
-        NetworkUCSMSpTemplateList:
-          type: string
-          description: Host to Service Profile Template mapping with its path
-          default: ''
-        NetworkUCSMVnicTemplateList:
-          type: string
-          description: >
-              Neutron physical network to vNIC Template mapping with its path
-          default: ''
-        NetworkNexusConfig:
-          type: json
-          description: Nexus switch configuration
-          default: {}
-        NetworkNexusManagedPhysicalNetwork:
-          type: string
-          description: The name of the physical_network
-          default: ''
-        NetworkNexusVlanNamePrefix:
-          type: string
-          description:  >
-            This configuration item is OBSOLETE.
-            A short prefix to prepend to the VLAN name
-          default: 'q-'
-        NetworkNexusSviRoundRobin:
-          type: boolean
-          description:  >
-            This configuration item is OBSOLETE.
-            A flag to enable round robin scheduling
-          default: false
-        NetworkNexusProviderVlanNamePrefix:
-          type: string
-          description:  >
-            This configuration item is OBSOLETE.
-            A short prefix to prepend to the VLAN name.
-          default: 'p-'
-        NetworkNexusPersistentSwitchConfig:
-          type: string
-          description: >
-            This config item will be deprecated.
-            To make Nexus device persistent.
-          default: false
-        NetworkNexusNeverCacheSshConnection:
-          type: string
-          description: >
-            This config item will be deprecated.
-            Prevent Cache of ssh connection
-          default: false
-        NetworkNexusSwitchHeartbeatTime:
-          type: number
-          description: >
-            Time interval to check the state of the Nexus device. The units of this
-            object are seconds.  Setting this object to a value of 0 disables the
-            replay feature.
-          default: 30
-        NetworkNexusSwitchReplayCount:
-          type: number
-          description: >
-            This configuration item is OBSOLETE.  The Nexus driver replay behavior
-            is to continue to attempt to connect to the down Nexus device with a
-            period equal to the heartbeat time interval.  This was previously the
-            Number of times to attempt config replay.
-          default: 3
-        NetworkNexusCfgDriver:
-          type: string
-          description: >
-            This will be deprecated.  Lower-level configuration driver which sends
-            commands to the Nexus Device.  Choices are 'restapi' or 'ncclient'
-            where the latter is being deprecated. So there is no longer a need for
-            this variable.
-          default: 'restapi'
-        NetworkNexusProviderVlanAutoCreate:
-          type: boolean
-          description: A flag whether to manage the creation and removal of VLANs
-          default: true
-        NetworkNexusProviderVlanAutoTrunk:
-          type: boolean
-          description: A flag whether to manage the trunk ports on the Nexus
-          default: true
-        NetworkNexusVxlanGlobalConfig:
-          type: boolean
-          description: A flag whether to manage the VXLAN global settings
-          default: true
-        NetworkNexusHostKeyChecks:
-          type: boolean
-          description: >
-            This config item will be deprecated.  It enables strict host key
-            checks when connecting to Nexus switches
-          default: false
-        NetworkNexusVxlanVniRanges:
-          type: string
-          description: VXLAN Network IDs that are available for tenant network
-          default: ''
-        NetworkNexusVxlanMcastRanges:
-          type: string
-          description: Multicast groups for the VXLAN interface.
-          default: ''
-
-      resources:
-        CollectMacHostnames:
-          type: OS::TripleO::MacHostname
-          properties:
-            servers: {get_param: servers}
-
-        ProcessNexusAndUCSMMappings:
-          type: OS::Heat::SoftwareConfig
-          properties:
-            group: script
-            inputs:
-              - name: controller_mappings
-              - name: compute_mappings
-              - name: orig_nexus_mapping
-              - name: orig_ucsm_mapping
-            config: |
-              #!/bin/python
-              import json
-              import os
-              import ast
-
-              heat_outputs_path = os.environ.get("heat_outputs_path")
-              controller_mappings = os.environ.get("controller_mappings")
-              compute_mappings = os.environ.get("compute_mappings")
-              orig_nexus_mapping = os.environ.get("orig_nexus_mapping")
-              orig_ucsm_mapping = os.environ.get("orig_ucsm_mapping")
-
-              controller_mappings = ast.literal_eval(controller_mappings)
-              compute_mappings = ast.literal_eval(compute_mappings)
-
-              if orig_nexus_mapping:
-                  orig_nexus_mapping = ast.literal_eval(orig_nexus_mapping)
-
-              # Take mapping of host to macs and convert them to a mac to host
-              # mapping
-              mac2host = {}
-              for mappings in [controller_mappings, compute_mappings]:
-                  for host, data in mappings.items():
-                      host_macs = data.strip().split()
-                      for mac in host_macs[1:]:
-                          mac2host[mac] = host_macs[0]
-
-              for nexus in orig_nexus_mapping:
-                  server_mapping = {}
-                  for mac, switchports in nexus['servers']:
-                      mac = mac.lower()
-                      if mac not in mac2host:
-                          continue
-                      server = mac2host[mac]
-                      if server in server_mapping:
-                          server_mapping[server]['ports'] += "," + switchports['ports']
-                      else:
-                          server_mapping[server]['ports'] = switchports
-                  nexus['servers'] = server_mapping
-
-              with open('%s.%s' % (heat_outputs_path, "nexus_mappings"), 'w') as out:
-                  out.write(json.dumps(orig_nexus_mappings))
-              with open('%s.%s' % (heat_outputs_path, "ucsm_mappings"), 'w') as out:
-                  out.write(json.dumps(ucsm_mappings))
-
-
 - name: Write out networking-cisco specific config environment resources
   copy:
     dest: /home/stack/environments/networking-cisco-config-resources-preupgrade.yaml
@@ -508,6 +290,71 @@
               echo "unknown release $1" >&2
               exit 1
           esac
+
+# 5.12. CHECKING CUSTOM PUPPET PARAMETERS
+
+- name: Write out replacement for custom ml2 config parameters
+  copy:
+    dest: /home/stack/environments/networking-cisco-config-params.yaml
+    content: |
+      parameter_defaults:
+        InternalApiNetworkVlanID: {{ testbed_vlan }}
+        StorageNetworkVlanID: {{ storage_vlan }}
+        StorageMgmtNetworkVlanID: {{ storage_mgmt_vlan }}
+        TenantNetworkVlanID: {{ tenant_network_vlan }}
+        EC2MetadataIp: {{ undercloud_local_ip | ipaddr('address') }}
+        ControlPlaneDefaultRoute: {{ undercloud_network_gateway }}
+
+        ExternalNetCidr: {{ overcloud_external_ip_cidr }}
+        ExternalAllocationPools: [{'start': '{{ overcloud_external_ip_start }}', 'end': '{{ overcloud_external_ip_end }}'}]
+        ExternalNetworkVlanID: {{ overcloud_external_vlan }}
+        ExternalInterfaceDefaultRoute: {{ overcloud_external_gateway }}
+
+        DnsServers: ["{{ dns_server_1 }}"]
+
+        NeutronTypeDrivers: '{{ type_driver }}'
+        NeutronNetworkType: '{{ network_type }}'
+        NeutronNetworkVLANRanges: '{{ network_nexus_vlan_range }}'
+        NeutronTunnelTypes: ''
+
+        NetworkUCSMIp: '{{ network_ucsm_ip }}'
+        NetworkUCSMUsername: '{{ network_ucsm_username }}'
+        NetworkUCSMPassword: '{{ network_ucsm_password }}'
+        NetworkUCSMHostList: '{{ network_ucsm_host_list }}'
+        NetworkUCSMHttpsVerify: '{{ network_ucsm_https_verify }}'
+        NetworkNexusConfig: {{ network_nexus_config|to_nice_json }}
+
+        NetworkNexusManagedPhysicalNetwork: {{ network_nexus_managed_physical_network }}
+        NetworkNexusVlanNamePrefix: '{{ network_nexus_vlan_name_prefix }}'
+        NetworkNexusSviRoundRobin: '{{ network_nexus_svi_round_robin|to_json }}'
+        NetworkNexusProviderVlanNamePrefix: '{{ network_nexus_provider_vlan_name_prefix }}'
+        NetworkNexusPersistentSwitchConfig: '{{ network_nexus_persistent_switch_config|to_json }}'
+        NetworkNexusSwitchHeartbeatTime: {{ network_nexus_switch_heartbeat_time }}
+        NetworkNexusSwitchReplayCount: {{ network_nexus_switch_replay_count }}
+        NetworkNexusProviderVlanAutoCreate: '{{ network_nexus_provider_vlan_auto_create|to_json }}'
+        NetworkNexusProviderVlanAutoTrunk: '{{ network_nexus_provider_vlan_auto_trunk|to_json }}'
+        NetworkNexusVxlanGlobalConfig: '{{ network_nexus_vxlan_global_config|to_json }}'
+        NetworkNexusHostKeyChecks: '{{ network_nexus_host_key_checks|to_json }}'
+        NeutronNetworkVLANRanges: '{{ network_nexus_vlan_range }}'
+        NeutronPluginExtensions: "qos,port_security,cisco_providernet_ext"
+
+        NetworkNexusVxlanVniRanges: '{{ vni_ranges }}'
+        NetworkNexusVxlanMcastRanges: '{{ mcast_ranges }}'
+
+        ControllerExtraConfig:
+          neutron::plugins::ml2::mechanism_drivers: {{ network_cntlr_mech_drivers | to_json }}
+          neutron::config::plugin_ml2_config: {{ extra_neutron_config_osp13 | to_json }}
+
+        NovaComputeExtraConfig:
+          neutron::plugins::ml2::mechanism_drivers: ['openvswitch']
+
+        NetConfigDataLookup: {{ overcloud_node_nic_mappings_bond | to_nice_json }}
+
+        # Format for node hostnames Note %index% is translated into the index
+        # of the node, e.g 0/1/2 etc and %stackname% is replaced with the stack
+        # name e.g overcloud
+        ComputeHostnameFormat: '{{ overcloud_node_prefix }}-%stackname%-compute-%index%'
+        ControllerHostnameFormat: '{{ overcloud_node_prefix }}-%stackname%-controller-%index%'
 
 # CHAPTER 6. UPGRADING THE OVERCLOUD
 
