--- a/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
+++ b/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
@@ -354,6 +354,106 @@
         ComputeHostnameFormat: '{{ overcloud_node_prefix }}-%stackname%-compute-%index%'
         ControllerHostnameFormat: '{{ overcloud_node_prefix }}-%stackname%-controller-%index%'
 
+- name: Create extended AllNodesExtraConfig to remove domain names
+  copy:
+    dest: /home/stack/templates/extended_nodes_extra_config.yaml
+    content: |
+      heat_template_version: 2015-04-30
+
+      parameters:
+        servers:
+          type: json
+
+      resources:
+        ConfigureML2:
+          type: OS::TripleO::NetCiscoOriginal
+          properties:
+            servers: {get_param: servers}
+
+        SlurpExistingNetCiscoData:
+          type: OS::Heat::SoftwareConfig
+          properties:
+            group: script
+            outputs:
+              - type: Json
+                name: net_cisco_data
+                description: "The corrected net_cisco heira data"
+            config: |
+              #!/bin/python
+              import json
+              import os
+
+              heat_outputs_path = os.environ.get("heat_outputs_path")
+              output_name = "net_cisco_data"
+
+              # Load old hieradata from the config file written by the original net cisco template
+              with open("/etc/puppet/hieradata/neutron_cisco_data.json") as oldjson:
+                  oldconfig = json.loads(oldjson.read())
+
+              # Remove mapped_data nesting as it breaks hiera since Ocata
+              oldconfig = oldconfig["mapped_data"]
+
+              # Convert nexus config string into nexus config json
+              nexus_config = json.loads(oldconfig["neutron::plugins::ml2::cisco::nexus::nexus_config"])
+              oldconfig["neutron::plugins::ml2::cisco::nexus::nexus_config"] = nexus_config
+
+              # Remove domains from the ucsm host list
+              existing_ucsm_config = oldconfig["neutron::plugins::ml2::cisco::ucsm::ucsm_host_list"]
+              existing_ucsm_config = existing_ucsm_config.strip()
+
+              if existing_ucsm_config:
+                  new_ucsm_hosts = []
+                  for oldhost in existing_ucsm_config.split(","):
+                      oldhost = oldhost.strip()
+                      host, sp = oldhost.split(":")
+                      host = host.split(".")[0]
+                      new_ucsm_hosts.append("%s:%s" % (host, sp))
+                  oldconfig["neutron::plugins::ml2::cisco::ucsm::ucsm_host_list"] = ",".join(new_ucsm_hosts)
+
+              # Write json to outputs directory
+              with open('%s.%s' % (heat_outputs_path, output_name), 'w') as out:
+                  out.write(json.dumps(oldconfig))
+
+        SlurpExistingNetCiscoDataDeploy:
+          type: OS::Heat::SoftwareDeployment
+          depends_on: ConfigureML2
+          properties:
+            name: SlurpExistingNetCiscoDataDeploy
+            server:  {get_param: [servers, Controller, '0']}
+            config: {get_resource: SlurpExistingNetCiscoData}
+            actions: ['CREATE']
+
+        ConvertToJson:
+          type: OS::TripleO::StringToMap
+          properties:
+            data: {get_attr: [SlurpExistingNetCiscoDataDeploy, net_cisco_data]}
+
+        NetworkingCiscoConfig:
+          type: OS::Heat::StructuredConfig
+          properties:
+            group: hiera
+            config:
+              datafiles:
+                neutron_cisco_data: {get_attr: [ConvertToJson, converted]}
+
+        NetworkCiscoConfigDeployment:
+          type: OS::Heat::StructuredDeployments
+          properties:
+            name: NetworkCiscoDeployment
+            config: {get_resource: NetworkingCiscoConfig}
+            servers:  {get_param: [servers, Controller]}
+            actions: ['CREATE']
+
+- name: Write out networking-cisco specific config environment resources
+  copy:
+    dest: /home/stack/environments/networking-cisco-config-resources.yaml
+    content: |
+      resource_registry:
+        OS::TripleO::NodeUserData: /usr/share/openstack-tripleo-heat-templates/firstboot/os-net-config-mappings.yaml
+        OS::TripleO::AllNodesExtraConfig: /home/stack/templates/extended_nodes_extra_config.yaml
+        OS::TripleO::NetCiscoOriginal: /usr/share/openstack-tripleo-heat-templates/puppet/extraconfig/all_nodes/neutron-ml2-cisco-nexus-ucsm.yaml
+        OS::TripleO::StringToMap: /home/stack/templates/json_converter.yaml
+
 # CHAPTER 6. UPGRADING THE OVERCLOUD
 
 # 6.1. PERFORMING THE FAST FORWARD UPGRADE OF THE
@@ -403,7 +503,7 @@
         -e /home/stack/templates/overcloud_images_neutron.yaml \
         -e /usr/share/openstack-tripleo-heat-templates/environments/network-isolation.yaml \
         -e /usr/share/openstack-tripleo-heat-templates/environments/net-bond-with-vlans.yaml \
-        -e /home/stack/environments/networking-cisco-config-resources-preupgrade.yaml \
+        -e /home/stack/environments/networking-cisco-config-resources.yaml \
         -e /home/stack/environments/networking-cisco-config-params.yaml \
         -e /home/stack/environments/custom_repositories_script.yaml \
         --ntp-server 1.ntp.esl.cisco.com
