--- a/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
+++ b/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
@@ -470,6 +470,35 @@
           description: Json data
           value: { get_param: data }
 
+- name: Write out RHEL subscription manager environment file parameters
+  copy:
+    dest: /home/stack/environments/rhel_sub_config.yaml
+    content: |
+      parameter_defaults:
+        rhel_reg_auto_attach: ""
+        rhel_reg_activation_key: ""
+        rhel_reg_org: ""
+        rhel_reg_pool_id: "{{ rh_sub_pool_id }}"
+        rhel_reg_repos: "rhel-7-server-rpms,rhel-7-server-extras-rpms,rhel-7-server-rh-common-rpms,\
+        rhel-ha-for-rhel-7-server-rpms,rhel-7-server-openstack-13-rpms"
+        rhel_reg_method: "portal"
+        rhel_reg_sat_repo: ""
+        rhel_reg_base_url: ""
+        rhel_reg_environment: ""
+        rhel_reg_force: ""
+        rhel_reg_machine_name: ""
+        rhel_reg_password: "{{ rh_sub_password }}"
+        rhel_reg_release: ""
+        rhel_reg_sat_url: ""
+        rhel_reg_server_url: ""
+        rhel_reg_service_level: ""
+        rhel_reg_user: "{{ rh_sub_username }}"
+        rhel_reg_type: ""
+        rhel_reg_http_proxy_host: ""
+        rhel_reg_http_proxy_port: ""
+        rhel_reg_http_proxy_username: ""
+        rhel_reg_http_proxy_password: ""
+
 - name: Write out networking-cisco specific config environment resources
   copy:
     dest: /home/stack/environments/networking-cisco-config-resources.yaml
@@ -532,7 +561,8 @@
         -e /usr/share/openstack-tripleo-heat-templates/environments/net-bond-with-vlans.yaml \
         -e /home/stack/environments/networking-cisco-config-resources.yaml \
         -e /home/stack/environments/networking-cisco-config-params.yaml \
-        -e /home/stack/environments/custom_repositories_script.yaml \
+        -e /home/stack/environments/delete_rhelsub.yaml \
+        -e /home/stack/environments/rhel_sub_config.yaml \
         --ntp-server 1.ntp.esl.cisco.com
 
 # CHAPTER 7. EXECUTING POST UPGRADE STEPS
@@ -553,6 +583,3 @@
     source /home/stack/stackrc
     openstack overcloud image upload --update-existing --image-path /home/stack/images/
     openstack overcloud node configure $(openstack baremetal node list -c UUID -f value)
-
-
-# TODO(sambetts) Add code to reenable unsubscription from RHEL on delete
