Add python-gabbi workaround to osp10-13 upgrade

--- a/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
+++ b/installer/step5-upgrade-undercloud-and-overcloud/osp10_osp13/tasks.yaml
@@ -583,3 +583,11 @@
     source /home/stack/stackrc
     openstack overcloud image upload --update-existing --image-path /home/stack/images/
     openstack overcloud node configure $(openstack baremetal node list -c UUID -f value)
+
+# Work around for python-gabbi version being out of date
+
+- name: Work around for BZ1613475
+  shell: |
+    yum install -y python2-heat-tests-tempest
+    rpm -ql python2-heat-tests-tempest|xargs rm -f || true
+  become: true
